# MailLens

./: .gitignore  README.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c76c72edbee3_init_core_tables.py
backend/app/: celery_app.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  chat.py  email.py  gmail.py  health.py  jobs.py  me.py  search.py  sync.py
backend/app/services/: chunking.py  indexing.py  rag.py  sync_service.py
backend/app/tasks/: beat_schedule.py  sync_tasks.py
backend/app/utils/: embeddings.py  gmail_client.py  google_oauth.py  jwt.py  llm.py  mime_parse.py  security.py  vectorstore.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/c/: client-layout.tsx  layout.tsx  page.tsx
frontend/app/c/[id]/: page.tsx
frontend/components/api/: axiosInstance.ts  chatApi.ts  emails.ts  searchApi.ts  syncApi.ts  userApi.ts
frontend/components/chat/: CitationPills.tsx  EmailModal.tsx  Main.tsx
frontend/components/search/: Search.tsx  SyncBadge.tsx
frontend/components/sidebar/: app-sidebar.tsx
frontend/components/ui/: TypingDots.tsx
frontend/context/: ChatSessionContext.tsx  UserContext.tsx
frontend/hooks/: useAskStream.ts  useSyncStatus.ts
